added correct path to bugzilla.conf and removed virt host ftom httpd.conf

--- a/bugzilla-4.4/configuration/bugzilla.conf
+++ b/bugzilla-4.4/configuration/bugzilla.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-        DocumentRoot /var/www/html/bugzilla
-        ServerName bugzilla.tryggth.com
+        DocumentRoot /var/www/html/bugzilla-cheyenne/bugzilla-4.4
+        ServerName li82-51.members.linode.com
         AddHandler cgi-script .cgi
         AddHandler imap-file map
-        <Directory "/var/www/html/bugzilla">
+        <Directory "/var/www/html/bugzilla-cheyenne/bugzilla-4.4">
                 AllowOverride Limit FileInfo Indexes
                 Options ExecCGI Indexes
                 DirectoryIndex index.cgi
