includes testopia and limesurvey

--- a/bugzilla-4.4/configuration/bugzilla.conf
+++ b/bugzilla-4.4/configuration/bugzilla.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
         DocumentRoot /var/www/html/bugzilla-cheyenne/bugzilla-4.4
-        ServerName li82-51.members.linode.com
+        ServerName localhost.localdomain
         AddHandler cgi-script .cgi
         AddHandler imap-file map
         <Directory "/var/www/html/bugzilla-cheyenne/bugzilla-4.4">
